--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <!-- <ul>
+    <li *ngFor="let x of myMovies">
+      <img [src]="x.Poster" alt="">
+      <h2>{{x.Title}}</h2>
+      <p>{{x.Year}}</p>
+    </li>
+  </ul> -->
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <!-- Ionic Card for our Movie Posters-->
+  <ion-card *ngFor="let movie of myMovies">
+    <img alt="Movie Poster" src={{movie.Poster}} /> <!-- Movie Poster-->
+    <ion-card-header>
+      <ion-card-title>{{movie.Title}}</ion-card-title> <!-- Movie Title Display -->
+      <ion-card-subtitle>{{movie.Year}}</ion-card-subtitle><!-- Movie Year Display -->
+    </ion-card-header>
+  
+  </ion-card>
 </ion-content>
